--- a/src/main/webapp/theme/index.html
+++ b/src/main/webapp/theme/index.html
@@ -1,6 +1,3 @@
-
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,12 +12,11 @@
   <title>SB Admin 2 - Dashboard</title>
 
   <!-- Custom fonts for this template-->
-  <link href="<c:url value="/theme/vendor/fontawesome-free/css/all.min.css"/>" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="<c:url value="/theme/css/sb-admin-2.css"/>" rel="stylesheet">
-
+  <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -90,8 +86,17 @@
             <h6 class="m-0 font-weight-bold text-primary">Lista użytkowników</h6>
           </div>
           <div class="card-body">
-
-
+            <table>
+              <thead>
+              <tr>
+                <td>Id</td>
+                <td>Nazwa użytkownika</td>
+                <td> E-mail</td>
+                <td>Akcja</td>
+              </tr>
+              </thead>
+            </table>
+            <p class="mb-0">Before working with this theme, you should become familiar with the Bootstrap framework, especially the utility classes.</p>
           </div>
         </div>
 
